styles.css
.species-card:hover {
    background-color: #708bd489;
    color: white;
    transform: scale(1.05);
}

iframe {
    width: 100%;
    height: 30em;
    border: none;
    margin-top: 0.5em;
}

ol {
    list-style-position: inside;
    padding-left: 0;
    margin: 0 auto;
}

.species-card {
    display: inline-block;
    vertical-align: top;
    width: 30%;
    min-width: 250px;
    max-width: 300px;
    height: 20em;
    margin: 0.5em;
    padding: 1em;
    box-sizing: border-box;
    text-align: center;
    font-size: 1em;
    background-color: #e2eef728;
    color: #0c225d;
    border: 1px solid #708bd489;
    border-radius: 5px;
    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
    transition: transform 0.2s, background-color 0.3s;
}

h2 {
    font-size: 1.2em;
}

nav ul li {
    display: inline;
    margin-right: 1em;
}

.species-gallery {
    margin-top: 1em;
    padding: 1em;
}

.container {
    max-width: 900px;
    padding: 2em;
    margin: 0 auto;
    text-align: center;
}

ul {
    list-style-type: none;
    padding-left: 0;
}

form {
    background-color: #e2eef7a6;
    padding: 1em;
    border-radius: 5px;
    max-width: 600px;
    margin: 2em auto;
    color: #0c225d;
    border: 1px solid #708bd489;
    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
}

header {
    top: 0;
}

table,
th,
td {
    border: 1px solid #708bd489;
}

input[type="submit"]:hover {
    background-color: #4abcc8;
}

section {
    margin: 2em;
    padding: 1em;
    text-align: center;
    border-radius: 6px;
    display: contents;
}

footer {
    bottom: 0;
}

.species-card p {
    font-size: 1em;
    margin-bottom: 0.5em;
}

label {
    font-weight: bold;
}

input[type="submit"] {
    background-color: #708ad4;
    color: white;
    padding: 0.7em 1.5em;
    border: none;
    border-radius: 5px;
    cursor: pointer;
}

ul,
ol {
    padding-left: 1.5em;
    text-align: center;
}

.intro-text {
    font-size: 1.2em;
    margin-bottom: 1em;
    word-spacing: normal;
}

nav a:hover {
    text-decoration: underline;
}

table {
    width: 100%;
    border-collapse: collapse;
    margin-top: 1em;
    background-color: #e2eef728;
    max-width: 800px;
    font-weight: bold;
    color: #0c225d;
    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
    border-radius: 5px;
    margin: 0 auto;
}

h1 {
    font-size: 3em;
}

h1,
h2 {
    margin-bottom: 0.5em;
    text-align: center;
    color: #0c225d;
}

nav a {
    color: white;
    text-decoration: none;
}

nav ul {
    list-style: none;
    display: inline-block;
}

header,
footer {
    background-color: #4aa6c899;
    color: white;
    position: fixed;
    padding: 0.5em;
    width: 100%;
    left: 0;
    right: 0;
    z-index: 1000;
    text-align: center;
}

input[type="text"],
select,
textarea {
    width: 80%;
    max-width: 800px;
    padding: 0.5em;
    margin-top: 0.3em;
    margin-bottom: 1em;
    border: 2px solid #8ea8dd;
    border-radius: 4px;
}

.species-card img {
    width: 100%;
    height: auto;
    display: block;
    margin: 0 auto 1em;
}

.species-card h3 {
    font-size: 1.5em;
    margin-bottom: 0.5em;
}

* {
    margin: 0;
    padding: 0;
}

body {
    font-family: Arial, sans-serif;
    line-height: 1.25;
    text-align: center;
    padding-top: 80px;
    padding-bottom: 80px;
    color: #dfe7e9;
    text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.4);
}

.ocean-background {
    padding: 1em;
    min-height: 100vh;
    background: url("ocean.jpg") no-repeat fixed center/cover;
}

.species-facts {
    background-color: #e2eef751;
    padding: 1em;
    border-radius: 5px;
    margin-top: 1em;
    max-width: 800px;
    margin: 0 auto;
    color: #0c225d;
    border: 1px solid #708bd489;
    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
}

th,
td {
    padding: 0.5em;
    text-align: center;
}

